IDEA Account page

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -308,6 +308,35 @@
       "COULDNT_LOAD_LIST": "Couldn't load the list",
       "MAIN_EXPLANATION": "The users in your team. You can manage their permissions and add new users",
       "DELETION_OPERATION_FAILED": "Operation failed; make sure the user doesn't have active memberships in other services"
+    },
+    "ACCOUNT": {
+      "ACCOUNT": "Account",
+      "EMAIL": "Email address (for login and notifications)",
+      "SET_A_NEW_EMAIL": "Change the email address; requires your current password",
+      "UPDATE_EMAIL": "Change the email address",
+      "UPDATE_EMAIL_EXPLANATION": "The new email address won't be active until you confirm it",
+      "YOUR_CURRENT_PASSWORD": "Your current password",
+      "NEW_EMAIL": "The new email address",
+      "UPDATE_EMAIL_FLOW_EXPLANATION": "We sent an email to the new address: follow the procedure to confirm the changes",
+      "INVALID_EMAIL": "The email address inserted is not valid",
+      "PASSWORD": "Password",
+      "SET_A_NEW_PASSWORD": "Change the password; requires the current password",
+      "UPDATE_PASSWORD": "Change password",
+      "NEW_PASSWORD_": "New password: min {{n}} characters",
+      "CONFIRM_NEW_PASSWORD": "Repeat the new password",
+      "INVALID_PASSWORD": "The password should be at least {{n}} characters long",
+      "PASSWORD_CONFIRMATION_DONT_MATCH": "The password confirmation doesn't match",
+      "PASSWORD_UPDATED": "Password updated",
+      "OPERATION_FAILED_PASSWORD": "Operation failed; is the password you typed correct?",
+      "DISRUPTIVE_ACTIONS": "Disruptive actions",
+      "DELETE": "Delete",
+      "USER_DELETION": "Account deletion",
+      "USER_DELETION_ARE_YOU_SURE": "Are you sure? The operation is irreversible!!",
+      "IRREVERSIBLE_OPERATION": "Warning: the operation is irreversible!!",
+      "YOU_MUST_LEAVE_ALL_TEAMS_FIRST": "Before to proceed, you have to leave all the teams you joined",
+      "DELETE_PERMANENTLY_USER": "Permanently delete the account",
+      "MANAGE_YOUR_ACCOUNT": "Manage your account",
+      "MANAGE_YOUR_ACCOUNT_HINT": "Manage your IDEA account"
     }
   },
   "IDEA_VARIABLES": {
