--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -308,6 +308,35 @@
       "COULDNT_LOAD_LIST": "Errore nel caricare la lista",
       "MAIN_EXPLANATION": "Gli utenti del tuo team. Puoi gestire i loro permessi o aggiungere nuovi utenti",
       "DELETION_OPERATION_FAILED": "Operazione fallita; verifica che l'utente non sia registrato in altri servizi"
+    },
+    "ACCOUNT": {
+      "ACCOUNT": "Account",
+      "EMAIL": "Indirizzo email (per login e notifiche)",
+      "SET_A_NEW_EMAIL": "Cambia indirizzo email; richiede la password e la conferma dell'indirizzo email",
+      "UPDATE_EMAIL": "Cambia indirizzo email",
+      "UPDATE_EMAIL_EXPLANATION": "Il nuovo indirizzo email non sarà attivo finchè non lo confermerai",
+      "YOUR_CURRENT_PASSWORD": "La tua attuale password",
+      "NEW_EMAIL": "Il nuovo indirizzo email",
+      "UPDATE_EMAIL_FLOW_EXPLANATION": "Abbiamo inviato un'email al nuovo indirizzo: segui la procedura per confermare il cambiamento",
+      "INVALID_EMAIL": "L'ndirizzo email inserito non è valido",
+      "PASSWORD": "Password",
+      "SET_A_NEW_PASSWORD": "Cambia la password; richiede la password precedente",
+      "UPDATE_PASSWORD": "Cambia password",
+      "NEW_PASSWORD_": "Nuova password: min {{n}} caratteri",
+      "CONFIRM_NEW_PASSWORD": "Ripeti nuova password",
+      "INVALID_PASSWORD": "La password dev'essere lunga almeno {{n}} caratteri",
+      "PASSWORD_CONFIRMATION_DONT_MATCH": "La conferma della password non coincide",
+      "PASSWORD_UPDATED": "Password aggiornata",
+      "OPERATION_FAILED_PASSWORD": "Operazione fallita; la password inserita è corretta?",
+      "DISRUPTIVE_ACTIONS": "Azioni distruttive",
+      "DELETE": "Elimina",
+      "USER_DELETION": "Eliminazione account",
+      "USER_DELETION_ARE_YOU_SURE": "Sei sicuro? L'operazione è irreversibile!!",
+      "IRREVERSIBLE_OPERATION": "Attenzione: l'operazione è irreversibile!!",
+      "YOU_MUST_LEAVE_ALL_TEAMS_FIRST": "Prima di procedere, devi lasciare tutti i tuoi team",
+      "DELETE_PERMANENTLY_USER": "Eliminazione irreversibile dell'account",
+      "MANAGE_YOUR_ACCOUNT": "Gestione account",
+      "MANAGE_YOUR_ACCOUNT_HINT": "Gestisci il tuo account IDEA"
     }
   },
   "IDEA_VARIABLES": {
