Improved agenda; old calendar -> calendarPicker

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -340,7 +340,6 @@
     },
     "AGENDA": {
       "AGENDA": "Agenda",
-      "CALENDARS": "Calendars",
       "ALL_CALENDARS": "All calendars",
       "NO_CALENDARS": "No calendars",
       "MONTH": "Month",
@@ -368,6 +367,52 @@
         "FORM_HAS_ERROR_TO_CHECK": "One or more configurations have values which are not allowed; check and try again",
         "SAVED": "Appointment saved",
         "DELETED": "Appointment deleted"
+      },
+      "CALENDARS": {
+        "CALENDARS": "Calendars",
+        "ADD_CALENDAR_HINT": "Add a new calendar",
+        "PRIVATE_CALENDARS": "Private calendars",
+        "PRIVATE_CALENDARS_HINT": "These calendars and their appointments are visible only to you",
+        "TEAM_CALENDARS": "{{team}}'s calendars",
+        "TWAM_CALENDARS_HINT": "These calendars and their appointments are visible to the whole team",
+        "NO_CALENDARS": "No calendars",
+        "LINKED_TO": "Calendar linked to",
+        "SERVICES": {
+          "GOOGLE": "Google Calendar",
+          "MICROSOFT": "Microsoft Outlook"
+        },
+        "EDIT_CALENDAR": "Edit calendar",
+        "PRIVATE_CALENDAR": "Private calendar",
+        "PRIVATE_CALENDAR_HINT": "The calendars and its appointments are visible only to you",
+        "TEAM_CALENDAR": "{{team}}'s calendars",
+        "TWAM_CALENDAR_HINT": "The calendar and its appointments are visible to the whole team",
+        "NAME": "Name",
+        "NAME_HINT": "Name of the calendar",
+        "DESCRIPTION": "Description",
+        "DESCRIPTION_HINT": "Description of the calendar",
+        "COLOR": "Distinctive colour",
+        "COLOR_HINT": "Supported HEX and RGB (preview on the right)",
+        "INFO_ON_CALENDAR": "Other info",
+        "CALENDAR_SAVED": "Calendar saved",
+        "ADD_A_CALENDAR": "Add a calendar",
+        "CREATE_PRIVATE_OR_TEAM": "Do you want to create a private or a team-shared calendar?",
+        "DO_YOU_WANTO_LINK_TO_EXTERNAL_SERVICE": "Do you want to link the calendar to an external service?",
+        "DO_YOU_WANTO_LINK_TO_EXTERNAL_SERVICE_HINT": "Note well: you can't change this configuration later",
+        "DONT_LINK": "Don't link",
+        "DONT_LINK_HINT": "The calendar won't be synchronised with any external service",
+        "LINK": "Link",
+        "LINK_TO": "Link to",
+        "LINK_TO_HINT": "Synchrnonise the appointments with an external calendar",
+        "DEFAULT_PRIVATE_CALENDAR_NAME": "My calendar",
+        "DEFAULT_TEAM_CALENDAR_NAME": "My team's calendar",
+        "CALENDAR_CREATED": "Calendar created",
+        "DANGEROUS_ZONE": "Dangerous zone",
+        "DELETE_CALENDAR": "Delete calendar",
+        "DELETE_CALENDAR_HINT": "Warning! The calendar and its appointments will be deleted in an irreversable operation!",
+        "CALENDAR_DELETED": "Calendar deleted",
+        "CALENDAR_NOT_YET_LINKED": "Calendar not linked yet",
+        "CALENDAR_NOT_YET_LINKED_HINT": "The calendar isn't linked to the external service yet: select the calendar and proceed with the operation",
+        "DO_YOU_WANT_PROCEED_LINKING_OR_DELETE": "Do you want to try again to link the calendar or you wish to delete it?"
       }
     },
     "SUBSCRIPTION": {
