--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -340,7 +340,6 @@
     },
     "AGENDA": {
       "AGENDA": "Agenda",
-      "CALENDARS": "Calendari",
       "ALL_CALENDARS": "Tutti i calendari",
       "NO_CALENDARS": "Nessun calendario",
       "MONTH": "Mese",
@@ -368,6 +367,52 @@
         "FORM_HAS_ERROR_TO_CHECK": "Una o più campi hanno valori non consentiti; verifica e riprova",
         "SAVED": "Appuntamento salvato",
         "DELETED": "Appuntamento eliminato"
+      },
+      "CALENDARS": {
+        "CALENDARS": "Calendari",
+        "ADD_CALENDAR_HINT": "Aggiungi un nuovo calendario",
+        "PRIVATE_CALENDARS": "Calendari privati",
+        "PRIVATE_CALENDARS_HINT": "Questi calendari e i relativi appuntamenti sono visibili solo a te",
+        "TEAM_CALENDARS": "Calendari di {{team}}",
+        "TEAM_CALENDARS_HINT": "Questi calendari e i relativi appuntamenti sono condivisi con tutto il team",
+        "NO_CALENDARS": "Nessun calendario",
+        "LINKED_TO": "Calendario collegato a",
+        "SERVICES": {
+          "GOOGLE": "Google Calendar",
+          "MICROSOFT": "Microsoft Outlook"
+        },
+        "EDIT_CALENDAR": "Modifica calendario",
+        "PRIVATE_CALENDAR": "Calendario privato",
+        "PRIVATE_CALENDAR_HINT": "Il calendario e i relativi appuntamenti sono visibili solo a te",
+        "TEAM_CALENDAR": "Calendario di {{team}}",
+        "TEAM_CALENDAR_HINT": "Il calendario e i relativi appuntamenti sono condivisi con tutto il team",
+        "NAME": "Nome",
+        "NAME_HINT": "Nome del calendario",
+        "DESCRIPTION": "Descrizione",
+        "DESCRIPTION_HINT": "Descrizione del calendario",
+        "COLOR": "Colore distintivo",
+        "COLOR_HINT": "Supporta HEX e RGB (anteprima a destra)",
+        "INFO_ON_CALENDAR": "Altre informazioni",
+        "CALENDAR_SAVED": "Calendario salvato",
+        "ADD_A_CALENDAR": "Aggiungi un calendario",
+        "CREATE_PRIVATE_OR_TEAM": "Vuoi creare un calendario privato o condiviso col team?",
+        "DO_YOU_WANTO_LINK_TO_EXTERNAL_SERVICE": "Vuoi collegare il calendario a un servizio esterno?",
+        "DO_YOU_WANTO_LINK_TO_EXTERNAL_SERVICE_HINT": "Nota bene: non puoi cambiare questa configurazione in seguito",
+        "DONT_LINK": "Non collegare",
+        "DONT_LINK_HINT": "Il calendario non sarà sincronizzato con un servizio esterno",
+        "LINK": "Collega",
+        "LINK_TO": "Collega a",
+        "LINK_TO_HINT": "Sincronizza gli appuntamenti con un calendario esterno",
+        "DEFAULT_PRIVATE_CALENDAR_NAME": "Il mio calendario",
+        "DEFAULT_TEAM_CALENDAR_NAME": "Il calendario del mio team",
+        "CALENDAR_CREATED": "Calendario creato",
+        "DANGEROUS_ZONE": "Zona pericolosa",
+        "DELETE_CALENDAR": "Elimina calendario",
+        "DELETE_CALENDAR_HINT": "Attenzione! Il calendario e i relativi appuntamenti saranno eliminati in un'operazione non reversibile!",
+        "CALENDAR_DELETED": "Calendario eliminato",
+        "CALENDAR_NOT_YET_LINKED": "Calendario non ancora collegato",
+        "CALENDAR_NOT_YET_LINKED_HINT": "Il calendario non è ancora collegato con il servizio esterno: seleziona il calendario e procedi con l'operazione",
+        "DO_YOU_WANT_PROCEED_LINKING_OR_DELETE": "Vuoi provare ancora a collegarlo o preferisci eliminarlo?"
       }
     },
     "SUBSCRIPTION": {
